--- a/style.css
+++ b/style.css
@@ -1,133 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 body{
-    --border-color: #fff;
-    color:#222;
-    background-image:   
-            linear-gradient(
-                200deg, #7045d3, #AB65F0
-            );
-    font-family: Poppins;
-    min-height: 100vh;
+    background-color: #0C0F20;
     margin: 0;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-a{
-    text-decoration: none;
+.list{
+    width: 1500px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 450px;
+    gap: 50px;
 }
-.login{
-    background-color: #efefef;
-    width: 270px;
-    text-align: center;
-    border: 2px solid var(--border-color);
-    border-radius: 30px;
-    padding: 50px 30px;
-    box-shadow: 0 50px 150px #5553;
-    position: relative;
-}
-.login .title{
-    font-size: x-large;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-.login .des{
-    margin-bottom: 20px;
-}
-.login .group{
-    background-color: var(--border-color);
-    border-radius: 10px;
-    height: 50px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.login .group input{
+.list .item img{
     width: 100%;
     height: 100%;
-    border: none;
-    background-color: transparent;
-    padding: 20px;
-    font-family: Poppins;
-    outline: none;
-}
-.login .group span{
-    color: #777;
-    display: flex;
-    margin-right: 15px;
-    cursor: pointer;
-}
-.login .group span ion-icon:nth-child(2){
-    display: none;
-}
-.login .recovery{
-    text-align: right;
-    margin-bottom: 20px;
-    font-size: small;
-}
-.login .signIn button{
-    background-color: #FA6A69;
-    width: 100%;
-    border-radius: 10px;
-    height: 50px;
-    border: none;
-    font-family: Poppins;
-    box-shadow: 0 10px 20px #FA6A6999;
-    margin-bottom: 40px;
+    border-radius: 20px;
+    object-fit: cover;
     transition: 0.5s;
-    color: #fff;
 }
-.login .signIn button:active{
-    box-shadow: none;
-    transform: translateY(5px);
+.list .item:hover img{
+    transform: scale(1.2);
 }
-.login .or{
-    font-size: small;
-    margin-bottom: 20px;
+.list .item{
+    color: #c7c3c3;
+    font-family: Poppins;
     position: relative;
+    transition: 0.5s;
 }
-.login .or::before,
-.login .or::after{
-    width: 50px;
-    height: 1px;
-    background-image:  
-        linear-gradient(
-            to left, #444, transparent
-        );
-    content: '';
+.list .item .content{
     position: absolute;
-    top: 50%;
-    left: 20px;
+    bottom: 0;
+    color: #fff;
+    padding: 20px;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: 0.5s;
 }
-.login .or::after{
-    left: unset;
-    right: 20px;
-    background-image:  
-        linear-gradient(
-            to right, #444, transparent
-        );
+.list .item:hover .content{
+    opacity: 1;
+    transform: translateY(0);
 }
-.login  .list .item img{
-    width: 30px;
-}
-.login .list{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 40px;
-    gap: 20px;
-    margin-bottom: 30px;
-}
-.login .list .item{
-    border: 1px solid var(--border-color);
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.login .register{
-    font-size: small;
-}
-.login .recovery a{
-    color: #1364cf;
+.list:hover .item:not(:hover){
+    filter: blur(8px);
 }
